--- a/index.html
+++ b/index.html
@@ -12,16 +12,31 @@
     crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="sidebar">
+    <h1>Minesweeper</h1>    
+    <div class="flex-container">
+        <div class="sidebar">
+            <section id="instructions">
+                <h2>Instructions</h2>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+                    sed diam nonumy eirmod tempor invidunt ut labore et dolore magna 
+                    aliquyam erat, sed diam voluptua. At vero eos et accusam et 
+                    justo duo dolores et ea rebum. Stet clita kasd gubergren, no 
+                    sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem 
+                    ipsum dolor sit amet, consetetur sadipscing elitr, sed diam 
+                    nonumy eirmod tempor invidunt ut labore et dolore magna 
+                    aliquyam erat, sed diam voluptua.</p>
+            </section>
             <section id="size-btns">
                 <button id="size-9">Easy</button> 
                 <button id="size-16">Medium</button> 
                 <button id="size-30">Hard</button>
             </section>
         </div>
-                <br>
-                <table id="board">
-                </table>
+    </div>
+<br>
+    <div class="game-board">
+        <table id="board"></table>
+    </div>
     <script src="js/cell.js"></script>
     <script src="js/main.js"></script>
 </body>
